# pghouse

./: Cargo.toml  INTERNAL.md  LICENSE  README.md  pghouse.control
.github/workflows/: compile_check.yml
scripts/: README.md  benchmark_postgres_vs_pghouse.py
src/: am.rs  api.rs  bootstrap.rs  catalog.rs  compression.rs  interface.rs  lib.rs  storage.rs  worker.rs
src/core/: codec.rs  file_layout.rs  interface.rs  mod.rs  pk.rs  scan.rs  snapshot.rs
src/pg/: api.rs  catalog.rs  mod.rs  scan.rs  storage.rs  worker.rs
