[package]
name = "pghouse"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18"]
pg_test = []

[dependencies]
pgrx = { version = "0.17.0", default-features = false }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zstd = "0.13.3"

[dev-dependencies]
pgrx-tests = { version = "0.17.0" }
